# dcs-sen-exporter

./: .gitmodules  CMakeLists.txt  README.md  conanfile.py
DCS/: Export.lua
config/: config.json
example/: input.json
src/: component.cpp  component.h  data_definitions.h  main.cpp  physical_entity_manager.cpp  physical_entity_manager.h  platform_manager.cpp  platform_manager.h  recording_processing.h
